--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
 		/>
 		<script src="jquery-3.5.1.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
@@ -31,7 +31,7 @@
 			content="Web site created using create-react-app"
 		/>
 
-		<title>React App</title>
+		<title>Askit</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
