--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,7 @@
 		/>
 		<script src="jquery-3.5.1.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 		<link
 			rel="stylesheet"
@@ -28,7 +29,7 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="Web site created using create-react-app for MOP."
 		/>
 
 		<title>Askit</title>
