--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
 			name="description"
 			content="Askit is a social network designed for those who want to send their questions out in the world!"
 		/>
-		<link rel="apple-touch.icon" href="./images/logo.png" />
+		<link rel="apple-touch-icon" href="./images/logo.png" />
 		<link rel="manifest" href="./manifest.json" />
 
 		<title>
