--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
 		<script src="jquery-3.5.1.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-		<link rel="icon" type="image/png" href="./images/logo.png" />
+		<link rel="icon" type="image/png" href="./images/favicon.png" />
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
