--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,20 @@
 		<meta charset="utf-8" />
 		<!-- CSS only -->
 
+		<meta property="og:URL" content="./images/cover.png" />
+
+		<meta
+			property="og:title"
+			content="Askit - Social network for asking questions"
+		/>
+
+		<meta
+			property="og:description"
+			content="Askit - is a web platform where you can sign up and ask public questions on the platform. The web app is made using Postgres & Node.js in the backend and React.js on the frontend. We are using bootstrap for styling alongside our own custom CSS for glassmorphism effect."
+		/>
+
+		<meta property="og:image" content="./images/cover.png" />
+
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -27,10 +41,7 @@
 		></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Askit is a social network designed for those who want to send their questions out in the world!"
-		/>
+
 		<link rel="apple-touch-icon" href="./images/logo.png" />
 		<link rel="manifest" href="./manifest.json" />
 
